templates/flamescope-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flamescope-ingress
  namespace: app-ns
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: flamescope-service
                port:
                  number: 5000
